--- a/man/xs.1
+++ b/man/xs.1
@@ -117,7 +117,7 @@ The empty word is denoted by
 .PP
 Words are indivisible and immutable.
 .SS Escapes
-A special character may be escaped by preceeding it with a backslash
+A special character may be escaped by preceding it with a backslash
 .RB ( \e ).
 This defeats the character's special meaning, allowing the character
 to be (part of) a word.
